# nvm-rust

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  Taskfile.yml  rustfmt.toml
.changes/: config.json  test.md
.github/: dependabot.yml  renovate.json5
.github/workflows/: ci.yml  main.yml  release.yml  status.yml  upload-artifacts.yml  version-publishing.yml
src/: archives.rs  config.rs  constants.rs  main.rs  node_version.rs  old_config.rs  subcommand.rs  subcommands.rs  utils.rs
src/actions/: mod.rs
src/files/: mod.rs  package_json.rs
src/subcommand/: install.rs  is_installed.rs  list.rs  ls.rs  mod.rs  parse_version.rs  switch.rs  uninstall.rs
src/subcommands/: ls.rs
test-data/: node-versions.json
tests/: common.rs  install_test.rs  switch_test.rs  uninstall_test.rs  utils.rs  xxx_test.rs
tests/common/: mod.rs
