[package]
name = "nvm-rust"
version = "0.4.3"
description = "A node version manager that doesn't suck"
authors = ["BeeeQueue <adam@haglund.dev>"]
repository = "https://github.com/BeeeQueue/nvm-rust"
homepage = "https://github.com/BeeeQueue/nvm-rust"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["node", "version", "manager", "nvm"]
categories = ["command-line-utilities"]
edition = "2021"

exclude = [
  ".github/",
  "tests/",
  "test-data/",
]

[profile.release]
strip = true
lto = true

[[bin]]
name = "nvm"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.5.4", features = ["derive", "env", "cargo"] }
dialoguer = "0.11.0"
dirs = "4.0.0"
itertools = "0.12.0"
node-semver = "2.1.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
spectral = "0.6.0"
ureq = { version = "2.9.1", features = ["native-certs", "json"] }

[target.'cfg(unix)'.dependencies]
flate2 = "1.0.28"
tar = "0.4.40"

[target.'cfg(windows)'.dependencies]
zip = "0.6.6"

[dev-dependencies]
assert_cmd = "2.0.12"
assert_fs = "1.0.13"
predicates = "3.0.4"
